wifi: tinker_edge_r wifi function bring up
1. Add RTL8822BE wifi driver
2. Disable sdio bus
3. Remove rk3399pro evb board wifi config

Change-Id: Ic38e73bb8605fbcd0aa7dfd48015851643db1413

--- a/arch/arm64/boot/dts/rockchip/tinker_edge_r.dts
+++ b/arch/arm64/boot/dts/rockchip/tinker_edge_r.dts
@@ -148,15 +148,6 @@
 		regulator-max-microvolt = <5000000>;
 	};
 
-	wireless-wlan {
-		compatible = "wlan-platdata";
-		rockchip,grf = <&grf>;
-		wifi_chip_type = "ap6398s";
-		sdio_vref = <1800>;
-		WIFI,host_wake_irq = <&gpio0 RK_PA3 GPIO_ACTIVE_HIGH>;
-		status = "okay";
-	};
-
 	wireless-bluetooth {
 		compatible = "bluetooth-platdata";
 		clocks = <&rk809 1>;
@@ -897,6 +888,10 @@
 &saradc {
 	status = "okay";
 	vref-supply = <&vcc_1v8>;
+};
+
+&sdio0 {
+	status = "disabled";
 };
 
 &sdmmc {
