arm64: dts: Disable edp panel settings for tinker
Disable unsupported edp panel settings for tinker edge r

Change-Id: I2171ca930a5d0185782bb7fcaae193070c2c5b66

--- a/arch/arm64/boot/dts/rockchip/tinker_edge_r.dts
+++ b/arch/arm64/boot/dts/rockchip/tinker_edge_r.dts
@@ -61,3 +61,27 @@
 		opp-microvolt = <900000>;
 	};
 };
+
+&edp {
+	status = "disabled";
+};
+
+&route_edp {
+	status = "disabled";
+};
+
+&gsl3673 {
+	status = "disabled";
+};
+
+&panel {
+	status = "disabled";
+};
+
+&backlight {
+	status = "disabled";
+};
+
+&pwm0 {
+	status = "disabled";
+};
