--- a/arch/arm64/boot/dts/rockchip/tinker_edge_r.dts
+++ b/arch/arm64/boot/dts/rockchip/tinker_edge_r.dts
@@ -675,18 +675,19 @@
 		layout = <3>;
 	};
 
-	ov13850: ov13850@10 {
-		compatible = "ovti,ov13850";
+	ov5647: ov5647@36 {
+		compatible = "ovti,ov5647";
 		status = "okay";
-		reg = <0x10>;
-		clocks = <&cru SCLK_CIF_OUT>;
+		reg = <0x36>;
+		clocks = <&cru SCLK_TESTCLKOUT2>;
 		clock-names = "xvclk";
 
 		/* conflict with csi-ctl-gpios */
-		reset-gpios = <&gpio4 26 GPIO_ACTIVE_HIGH>;
-		pwdn-gpios = <&gpio4 25 GPIO_ACTIVE_HIGH>;
-		pinctrl-names = "rockchip,camera_default";
-		pinctrl-0 = <&cif_clkout>;
+		power-gpios = <&gpio0 RK_PB0 GPIO_ACTIVE_HIGH>;
+		enable-gpios = <&gpio2 RK_PA3 GPIO_ACTIVE_HIGH>;
+		clksel-gpios = <&gpio4 RK_PD6 GPIO_ACTIVE_HIGH>;
+		pinctrl-names = "camera_default";
+		pinctrl-0 = <&test_clkout2>;
 		rockchip,camera-module-index = <0>;
 		rockchip,camera-module-facing = "back";
 		rockchip,camera-module-name = "CMK-CT0116";
@@ -695,6 +696,35 @@
 		port {
 			ucam_out0: endpoint {
 				remote-endpoint = <&mipi_in_ucam0>;
+				data-lanes = <1 2>;
+			};
+		};
+	};
+};
+
+&i2c2 {
+	status = "okay";
+	i2c-scl-rising-time-ns = <140>;
+	i2c-scl-falling-time-ns = <30>;
+
+	imx219: imx219@10 {
+		compatible = "sony,imx219";
+		status = "okay";
+		reg = <0x10>;
+		clocks = <&cru SCLK_CIF_OUT>;
+		clock-names = "xvclk";
+
+		/* conflict with csi-ctl-gpios */
+		power-gpios = <&gpio2 RK_PB3 GPIO_ACTIVE_HIGH>;
+		enable-gpios = <&gpio2 RK_PA2 GPIO_ACTIVE_HIGH>;
+		rockchip,camera-module-index = <0>;
+		rockchip,camera-module-facing = "back";
+		rockchip,camera-module-name = "CMK-CT0116";
+		rockchip,camera-module-lens-name = "Largan-50013A1";
+
+		port {
+			ucam_out1: endpoint {
+				remote-endpoint = <&mipi_in_ucam1>;
 				data-lanes = <1 2>;
 			};
 		};
@@ -786,7 +816,7 @@
 			mipi_in_ucam1: endpoint@1 {
 				reg = <1>;
 				/* Unlinked camera */
-				//remote-endpoint = <&ucam_out1>;
+				remote-endpoint = <&ucam_out1>;
 				data-lanes = <1 2>;
 			};
 		};
@@ -1154,6 +1184,14 @@
 		uart0_gpios: uart0-gpios {
 			rockchip,pins =
 				<2 RK_PC3 0 &pcfg_pull_none>;
+		};
+	};
+
+	isp {
+		test_clkout2: cif-test_clkout2 {
+			rockchip,pins =
+				/* test_clkout2 */
+				<0 8 RK_FUNC_3 &pcfg_pull_none>;
 		};
 	};
 };
