--- a/arch/arm64/configs/tinker_edge_r_defconfig
+++ b/arch/arm64/configs/tinker_edge_r_defconfig
@@ -306,6 +306,8 @@ CONFIG_VIDEO_ROCKCHIP_RGA=y
 CONFIG_VIDEO_TC35874X=y
 CONFIG_VIDEO_OV4689=y
 CONFIG_VIDEO_OV13850=y
+CONFIG_VIDEO_OV5647=y
+CONFIG_VIDEO_IMX219=y
 CONFIG_VIDEO_VM149C=y
 # CONFIG_DVB_AU8522_V4L is not set
 # CONFIG_DVB_TUNER_DIB0070 is not set
