--- a/arch/arm64/configs/tinker_edge_r_defconfig
+++ b/arch/arm64/configs/tinker_edge_r_defconfig
@@ -563,3 +563,4 @@ CONFIG_CRC7=y
 # CONFIG_XZ_DEC_POWERPC is not set
 # CONFIG_XZ_DEC_IA64 is not set
 # CONFIG_XZ_DEC_SPARC is not set
+CONFIG_USB_USBNET=y
