bt: add wireless-wlan device for bt use rf-kill
Change-Id: I0f585f522a7da2a7a97252d66281cf004cec3f06

--- a/arch/arm64/boot/dts/rockchip/tinker_edge_r.dts
+++ b/arch/arm64/boot/dts/rockchip/tinker_edge_r.dts
@@ -166,6 +166,12 @@
 		regulator-max-microvolt = <5000000>;
 	};
 
+	wireless-wlan {
+		compatible = "wlan-platdata";
+		wifi_chip_type = "rtl8822be";
+		status = "okay";
+	};
+
 	wireless-bluetooth {
 		compatible = "bluetooth-platdata";
 		clocks = <&rk809 1>;
