Enable eeprom config with m24c08 chip and i2c1 bus for SN/MAC data.
Change-Id: I6b3e080c056675074f477c016bc2b822b55483d4

--- a/arch/arm64/configs/tinker_edge_r_defconfig
+++ b/arch/arm64/configs/tinker_edge_r_defconfig
@@ -210,6 +210,7 @@ CONFIG_TOUCHSCREEN_GT1X=y
 CONFIG_ROCKCHIP_REMOTECTL=y
 CONFIG_ROCKCHIP_REMOTECTL_PWM=y
 CONFIG_INPUT_MISC=y
+CONFIG_EEPROM_AT24=y
 CONFIG_INPUT_RK8XX_PWRKEY=y
 CONFIG_INPUT_UINPUT=y
 CONFIG_INPUT_GPIO=y
