Hdmi: change vopl to vopb
Change-Id: I682df3421ff88553dd241e148e6a4997ee3ee057

--- a/arch/arm64/boot/dts/rockchip/tinker_edge_r.dts
+++ b/arch/arm64/boot/dts/rockchip/tinker_edge_r.dts
@@ -356,8 +356,13 @@
 		<000000000 0x0000 0x0000 0x0000>;
 };
 
-&hdmi_in_vopb {
+&hdmi_in_vopl {
 	status = "disabled";
+};
+
+&route_hdmi {
+    status = "okay";
+    connect = <&vopb_out_hdmi>;
 };
 
 &i2c0 {
