--- a/arch/arm64/configs/tinker_edge_r_defconfig
+++ b/arch/arm64/configs/tinker_edge_r_defconfig
@@ -88,7 +88,7 @@ CONFIG_SYN_COOKIES=y
 CONFIG_BT=y
 CONFIG_BT_RFCOMM=y
 CONFIG_BT_HIDP=y
-CONFIG_BT_HCIBTUSB=y
+# CONFIG_BT_HCIBTUSB is not set
 CONFIG_BT_HCIUART=y
 CONFIG_BT_HCIUART_ATH3K=y
 CONFIG_BT_HCIUART_LL=y
@@ -96,6 +96,7 @@ CONFIG_BT_HCIBFUSB=y
 CONFIG_BT_HCIVHCI=y
 CONFIG_BT_MRVL=y
 CONFIG_BT_MRVL_SDIO=y
+CONFIG_BT_RTKBTUSB=y
 CONFIG_NL80211_TESTMODE=y
 CONFIG_CFG80211_DEBUGFS=y
 CONFIG_CFG80211_WEXT=y
