dmc: Disable auto frequency.
To avoid the sound card hang issue.

Change-Id: I39e05837bb35115aed384a27f5ec8f7ea6d084f9

--- a/arch/arm64/boot/dts/rockchip/tinker_edge_r.dts
+++ b/arch/arm64/boot/dts/rockchip/tinker_edge_r.dts
@@ -260,9 +260,9 @@
 	system-status-freq = <
 		/*system status         freq(KHz)*/
 		SYS_STATUS_NORMAL       800000
-		SYS_STATUS_REBOOT       400000
-		SYS_STATUS_SUSPEND      400000
-		SYS_STATUS_VIDEO_1080P  400000
+		SYS_STATUS_REBOOT       800000
+		SYS_STATUS_SUSPEND      800000
+		SYS_STATUS_VIDEO_1080P  800000
 		SYS_STATUS_VIDEO_4K     800000
 		SYS_STATUS_VIDEO_4K_10B 800000
 		SYS_STATUS_PERFORMANCE  800000
@@ -272,11 +272,10 @@
 	>;
 	vop-bw-dmc-freq = <
 	/* min_bw(MB/s) max_bw(MB/s) freq(KHz) */
-		0       577      400000
-		578     99999    800000
+		0       99999    800000
 	>;
-	auto-min-freq = <400000>;
-	auto-freq-en = <1>;
+	auto-min-freq = <800000>;
+	auto-freq-en = <0>;
 };
 
 &dmc_opp_table {
@@ -295,6 +294,7 @@
 	opp-400000000 {
 		opp-hz = /bits/ 64 <400000000>;
 		opp-microvolt = <900000>;
+		status = "disabled";
 	};
 	opp-528000000 {
 		opp-hz = /bits/ 64 <528000000>;
