--- a/arch/arm64/boot/dts/rockchip/tinker_edge_r.dts
+++ b/arch/arm64/boot/dts/rockchip/tinker_edge_r.dts
@@ -176,10 +176,10 @@
 		compatible = "bluetooth-platdata";
 		clocks = <&rk809 1>;
 		clock-names = "ext_clock";
-		uart_rts_gpios = <&gpio2 RK_PC3 GPIO_ACTIVE_LOW>;
+		//uart_rts_gpios = <&gpio2 RK_PC3 GPIO_ACTIVE_LOW>;
 		pinctrl-names = "default", "rts_gpio", <&bt_irq_gpio>;
 		pinctrl-0 = <&uart0_rts>;
-		pinctrl-1 = <&uart0_gpios>;
+		//pinctrl-1 = <&uart0_gpios>;
 		BT,reset_gpio    = <&gpio2 RK_PD4 GPIO_ACTIVE_HIGH>;
 		BT,wake_gpio     = <&gpio2 RK_PD2 GPIO_ACTIVE_HIGH>;
 		//BT,wake_host_irq = <&gpio0 RK_PA5 GPIO_ACTIVE_HIGH>;
@@ -1238,10 +1238,10 @@
 				<0 RK_PA5 0 &pcfg_pull_down>;
 		};
 
-		uart0_gpios: uart0-gpios {
-			rockchip,pins =
-				<2 RK_PC3 0 &pcfg_pull_none>;
-		};
+		//uart0_gpios: uart0-gpios {
+		//	rockchip,pins =
+		//		<2 RK_PC3 0 &pcfg_pull_none>;
+		//};
 	};
 
 	isp {
