--- a/arch/arm64/configs/tinker_edge_r_defconfig
+++ b/arch/arm64/configs/tinker_edge_r_defconfig
@@ -87,6 +87,9 @@ CONFIG_SYN_COOKIES=y
 # CONFIG_ANDROID_PARANOID_NETWORK is not set
 CONFIG_BT=y
 CONFIG_BT_RFCOMM=y
+CONFIG_BT_BNEP=y
+CONFIG_BT_BNEP_MC_FILTER=y
+CONFIG_BT_BNEP_PROTO_FILTER=y
 CONFIG_BT_HIDP=y
 # CONFIG_BT_HCIBTUSB is not set
 CONFIG_BT_HCIUART=y
