--- a/arch/arm64/boot/dts/rockchip/tinker_edge_r.dts
+++ b/arch/arm64/boot/dts/rockchip/tinker_edge_r.dts
@@ -52,6 +52,12 @@
 			label = "volume up";
 			press-threshold-microvolt = <17000>;
 		};
+
+		/* first 64k(0xff8c0000~0xff8d0000) for ddr and suspend */
+		iram: sram@ff8d0000 {
+			compatible = "mmio-sram";
+			reg = <0x0 0xff8d0000 0x0 0x20000>; /* 128k */
+		};
 	};
 
 	clkin_gmac: external-gmac-clock {
@@ -254,28 +260,40 @@
 	status = "okay";
 };
 
+&dmac_bus {
+	iram = <&iram>;
+	rockchip,force-iram;
+};
+
 &dmc {
 	status = "okay";
 	center-supply = <&vdd_center>;
+	upthreshold = <40>;
+	downdifferential = <20>;
 	system-status-freq = <
 		/*system status         freq(KHz)*/
-		SYS_STATUS_NORMAL       800000
-		SYS_STATUS_REBOOT       800000
-		SYS_STATUS_SUSPEND      800000
-		SYS_STATUS_VIDEO_1080P  800000
-		SYS_STATUS_VIDEO_4K     800000
-		SYS_STATUS_VIDEO_4K_10B 800000
-		SYS_STATUS_PERFORMANCE  800000
-		SYS_STATUS_BOOST        800000
-		SYS_STATUS_DUALVIEW     800000
-		SYS_STATUS_ISP          800000
+		SYS_STATUS_NORMAL       856000
+		SYS_STATUS_REBOOT       416000
+		SYS_STATUS_SUSPEND      416000
+		SYS_STATUS_VIDEO_1080P  416000
+		SYS_STATUS_VIDEO_4K     856000
+		SYS_STATUS_VIDEO_4K_10B 856000
+		SYS_STATUS_PERFORMANCE  856000
+		SYS_STATUS_BOOST        856000
+		SYS_STATUS_DUALVIEW     856000
+		SYS_STATUS_ISP          856000
+	>;
+	vop-pn-msch-readlatency = <
+	/* plane_number  readlatency */
+		0	0
+		4	0x20
 	>;
 	vop-bw-dmc-freq = <
 	/* min_bw(MB/s) max_bw(MB/s) freq(KHz) */
-		0       99999    800000
+		763     1893     416000
+		3013    99999    856000
 	>;
-	auto-min-freq = <800000>;
-	auto-freq-en = <0>;
+	auto-min-freq = <416000>;
 };
 
 &dmc_opp_table {
@@ -296,6 +314,10 @@
 		opp-microvolt = <900000>;
 		status = "disabled";
 	};
+	opp-416000000 {
+		opp-hz = /bits/ 64 <416000000>;
+		opp-microvolt = <900000>;
+	};
 	opp-528000000 {
 		opp-hz = /bits/ 64 <528000000>;
 		opp-microvolt = <900000>;
@@ -309,6 +331,21 @@
 	opp-800000000 {
 		opp-hz = /bits/ 64 <800000000>;
 		opp-microvolt = <900000>;
+		status = "disabled";
+	};
+	opp-856000000 {
+		opp-hz = /bits/ 64 <856000000>;
+		opp-microvolt = <900000>;
+	};
+	opp-928000000 {
+		opp-hz = /bits/ 64 <928000000>;
+		opp-microvolt = <900000>;
+		status = "disabled";
+	};
+	opp-1056000000 {
+		opp-hz = /bits/ 64 <1056000000>;
+		opp-microvolt = <900000>;
+		status = "disabled";
 	};
 };
 
